plugins {
    id "org.springframework.boot" version "2.7.10"
    id "io.spring.dependency-management" version "1.1.0"
    id "java"
    id "idea"
}

group = "habr.telegram.bot"
version = "0.0.1-SNAPSHOT"

compileJava {
    targetCompatibility = "17"
    sourceCompatibility = "17"
}

repositories {
    mavenCentral()
}

configurations {
    implementation {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
    }
}

dependencies {
    implementation 'org.yaml:snakeyaml:2.0'

    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.10'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.10'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.7.10'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.10'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.7.10'

    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'org.jsoup:jsoup:1.15.4'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'

    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor "org.projectlombok:lombok:1.18.20"
}

test {
    useJUnitPlatform()
}
